--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Behavior specification for Gavel, validator of HTTP transactions",
   "scripts": {
     "test": "node -e 'console.error(\"There are no tests at the moment\"); process.exit(0);'",
-    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
+    "semantic-release": "semantic-release pre && npm publish && semantic-release post",
+    "docs:publish": "relish versions:add apiary/gavel:$(npm view . version) || relish push apiary/gavel:$(npm view . version) path ./features/"
   },
   "repository": {
     "type": "git",
