--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "node -e 'console.error(\"There are no tests at the moment\"); process.exit(0);'",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post",
-    "docs:publish": "relish versions:add apiary/gavel:$(npm view . version) || relish push apiary/gavel:$(npm view . version) path ./features/"
+    "docs:publish": "relish versions:add apiary/gavel:$(npm view . version); relish push apiary/gavel:$(npm view . version) path ./features/"
   },
   "repository": {
     "type": "git",
