--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,5 @@ cache:
     - "node_modules"
 before_install:
   - "npm -g install npm@latest"
-  - "curl -Lo travis_after_all.py https://raw.githubusercontent.com/dmakhno/travis_after_all/master/travis_after_all.py"
-after_success:  # travis_after_all.py is needed due to travis-ci/travis-ci#1548 & travis-ci/travis-ci#929
-  - "python travis_after_all.py"
-  - "export $(cat .to_export_back)"
+after_success:
   - "npm run semantic-release || true"
